# adaptive_A_B_prompt

./: .env.example  README.md  pyproject.toml
app/: main.py  models.py
app/services/: clarifier.py  executor.py
app/static/: index.html
tests/: test_integration_api.py  test_unit_clarifier.py
